Update MainIntegrationTest.java